# Piano-Transcription--C-

./: .gitignore  CMakeLists.txt  README.md
code/headers/: activations.h  dictionary.h  dynamicarray.h  evaluation.h  matrix.h  spectrogram.h  stft.h  wav.h
code/source/: activations.c  dictionary.c  dynamicarray.c  evaluation.c  main.c  matrix.c  spectrogram.c  stft.c  test.c  transcription.c  transcription.h  wav.c
